--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'libs/ui/stylesheets/global' as global;
+
+@include global.reset();
