--- a/libs/web/home/page/src/lib/home-page.component.html
+++ b/libs/web/home/page/src/lib/home-page.component.html
@@ -2,3 +2,4 @@
   <taro-icon-brand />
 </p>
 <p><a [routerLink]="paths.dashboard">Dashboard</a></p>
+<!--["#1365cb", "#14447e", "#ffcfe0", "#ffd38d", "#020b2a"]-->
