--- a/libs/ui/stylesheets/device.scss
+++ b/libs/ui/stylesheets/device.scss
@@ -69,3 +69,51 @@
     @content;
   }
 }
+
+@mixin media-xs() {
+  @media (max-width: 599.98px) {
+    @content;
+  }
+}
+
+@mixin media-s() {
+  @media (min-width: 600px) and (max-width: 959.98px) {
+    @content;
+  }
+}
+
+@mixin media-s-up() {
+  @media (min-width: 600px) {
+    @content;
+  }
+}
+
+@mixin media-m() {
+  @media (min-width: 960px) and (max-width: 1279.98px) {
+    @content;
+  }
+}
+
+@mixin media-m-up() {
+  @media (min-width: 960px) {
+    @content;
+  }
+}
+
+@mixin media-l() {
+  @media (min-width: 1280px) and (max-width: 1919.98px) {
+    @content;
+  }
+}
+
+@mixin media-l-up() {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin media-xl() {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
