[ui][home] Adding card

--- a/libs/ui/stylesheets/variables.scss
+++ b/libs/ui/stylesheets/variables.scss
@@ -4,5 +4,7 @@
     --taro-color-secondary: #1365cb;
     --taro-color-ternary: #ffcfe0;
     --taro-color-quaternary: #ffd38d;
+    --taro-color-quinary: #020b2a;
+    --taro-color-container: #fff;
   }
 }
