--- a/libs/web/home/page/src/lib/home-page.component.html
+++ b/libs/web/home/page/src/lib/home-page.component.html
@@ -1,5 +1,8 @@
 <p>
   <taro-icon-brand />
 </p>
+<p>
+  <taro-icon-card />
+</p>
 <p><a [routerLink]="paths.dashboard">Dashboard</a></p>
 <!--["#1365cb", "#14447e", "#ffcfe0", "#ffd38d", "#020b2a"]-->
